samples/_failures_safe/1761458102_7b0236_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2bc04c8f.c: In function ‘main’:
./samples/SAFE/__tmp_2bc04c8f.c:151:5: error: expected declaration or statement at end of input
  151 |     if (!compare_buffers(input_data, decompressed, input_len)) {
      |     ^~
./samples/SAFE/__tmp_2bc04c8f.c:151:5: error: expected declaration or statement at end of input
